tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__enum_conversion@MyStruct.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyStruct
{
    private Raw.MyStruct _inner;

    public byte A
    {
        get
        {
            unsafe
            {
                return _inner.a;
            }
        }
        set
        {
            unsafe
            {
                _inner.a = value;
            }
        }
    }

    public MyEnum B
    {
        get
        {
            unsafe
            {
                return (MyEnum)_inner.b;
            }
        }
        set
        {
            unsafe
            {
                _inner.b = (Raw.MyEnum)value;
            }
        }
    }

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from the raw representation.
    /// </summary>
    public unsafe MyStruct(Raw.MyStruct data)
    {
        _inner = data;
    }

    /// <summary>
    /// Returns a copy of the underlying raw representation.
    /// </summary>
    public Raw.MyStruct AsFFI()
    {
        return _inner;
    }
}
