tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__enum_conversion@RawMyEnum.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

public enum MyEnum
{
    A = 0,
    B = 1,
    C = 2,
}
