tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__enum_documentation@RawMyEnum.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

/// <summary>
/// Documentation for MyEnum.
/// </summary>
/// <remarks>
/// Some remarks about this struct.
/// <br/>
/// See the [Rust documentation for `MyEnum`](https://docs.rs/foo/latest/foo/enum.MyEnum.html) for more information.
/// </remarks>
public enum MyEnum
{
    /// <summary>
    /// All about A.
    /// </summary>
    A = 0,
    /// <summary>
    /// All about B.
    /// </summary>
    /// <remarks>
    /// See the [Rust documentation for `B`](https://docs.rs/foo/latest/foo/enum.MyEnum.html#variant.B) for more information.
    /// </remarks>
    B = 1,
    /// <summary>
    /// All about C.
    /// </summary>
    /// <remarks>
    /// Some remarks about this variant.
    /// <br/>
    /// Even more remarks.
    /// </remarks>
    C = 2,
}
