tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__error_handling@MyModuleErrorException.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyModuleErrorException : Exception
{
    private MyModuleError _inner;

    public MyModuleErrorException(MyModuleError inner) : base("MyModuleError error occurred")
    {
        _inner = inner;
    }

    public MyModuleError Inner
    {
        get
        {
            return _inner;
        }
    }
}
